# mythos-integration

./: .gitignore  README.md
asset-transfer-api-example/: README.md  package.json  tsconfig.json
asset-transfer-api-example/src/: allowDeath.ts  keepAlive.ts
polkadot-js-example/: README.md  package.json  tsconfig.json
polkadot-js-example/src/: transferAll.ts  transferAllowDeath.ts  transferKeepAlive.ts  transferWithTracking.ts
subxt-example/: Cargo.toml  README.md
subxt-example/metadata/: metadata.json  metadata.scale
subxt-example/src/: eth_signer.rs  main.rs
